# AI_Write_Novel

./: .gitignore  README.md  agents.py  architecture.md  database.py  main.py  package-lock.json  package.json
.agents/rules/: be-python.md  rust-tauri.md
.agents/skills/: agent_extensibility.md  storytelling.md  tools_ui_interaction.md
.agents/workflows/: gemini.md
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_agent.rs  error.rs  fs_manager.rs  lib.rs
src-tauri/src/ai/: api_client.rs  cancellation.rs  chat.rs  commands.rs  gemini_types.rs  instructions.rs  memory.rs  mod.rs  router.rs  tools.rs  write.rs
src-tauri/src/ai/nodes/: analyze.rs  complete.rs  coordinate.rs  execute.rs  finalize.rs  memory.rs  mod.rs  summarize.rs  thinking.rs
src-tauri/src/fs/: core.rs  explorer.rs  mod.rs  story.rs
src/js/: ai.js  editor.js  fileExplorer.js  main.js  settings.js  state.js  utils.js
src/js/services/: tauri.js
static/: app.js  index.html  style.css
